Correctly align filters to the left
Resolves: #212

--- a/assets/css/scss/components/hit.scss
+++ b/assets/css/scss/components/hit.scss
@@ -13,6 +13,7 @@
 		padding:0;
 		position: relative;
 		overflow:hidden;
+		text-align: center;
 
 		img {
 			margin:0;
